Java 8 compatibility fixed